Move the Enroll Desktops docs section
We are organizing the docs so that top-level sections correspond to
Teleport products. Move the Enroll Desktops section into Zero Trust
Access, since this functionality belongs to the ZTA product.

--- a/docs/pages/core-concepts.mdx
+++ b/docs/pages/core-concepts.mdx
@@ -107,7 +107,7 @@ Read more about the [Teleport Discovery Service](zero-trust-access/enroll-resour
 Proxies Remote Desktop Protocol (RDP) traffic to Windows desktops. Enables access control and session recording for Windows systems
 
 Read more about the [Teleport Desktop
-Service](./enroll-resources/desktop-access/introduction.mdx).
+Service](zero-trust-access/enroll-resources/desktop-access/introduction.mdx).
 
 ### Teleport Jamf Service
 
