--- a/docs/pages/zero-trust-access/enroll-resources/desktop-access/directory-sharing.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/desktop-access/directory-sharing.mdx
@@ -54,7 +54,7 @@ find the desktop, and click 'Connect' to start a session.
 Once the session starts, click the three-dot menu on the top-right of the screen
 and click "Share Directory":
 
-![The "Share Desktop" button](../../../img/desktop-access/share.png)
+![The "Share Desktop" button](../../../../img/desktop-access/share.png)
 
 ### Limitations on directories you can share
 
@@ -92,7 +92,7 @@ After you grant permissions, you will see a new directory in File Explorer on
 the remote desktop. The directory will have the same name as the directory on
 your local machine, but with "on teleport" appended to the name.
 
-![Shared directory in File Explorer](../../../img/desktop-access/shared-dir.png)
+![Shared directory in File Explorer](../../../../img/desktop-access/shared-dir.png)
 
 You can only share a single directory at a time.
 
@@ -189,11 +189,11 @@ $ tctl create -f role.yaml
 Directory Sharing is a powerful tool for editing files on remote desktops, and
 you'll want to make sure you have a comprehensive audit trail so you can conduct
 a post-incident retrospective or investigate unintended usage. Learn how to set
-up [session recording for desktop access](../../reference/agent-services/desktop-access-reference/sessions.mdx).
+up [session recording for desktop access](../../../reference/agent-services/desktop-access-reference/sessions.mdx).
 
 Aside from Directory Sharing, the Teleport Desktop Service also enables you to
 share the contents of your clipboard with a remote desktop. Learn how to use
-[Clipboard Sharing](../../reference/agent-services/desktop-access-reference/clipboard.mdx).
+[Clipboard Sharing](../../../reference/agent-services/desktop-access-reference/clipboard.mdx).
 
 ### How Directory Sharing works
 
