--- a/docs/pages/zero-trust-access/enroll-resources/desktop-access/getting-started.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/desktop-access/getting-started.mdx
@@ -137,7 +137,7 @@ Windows Desktop Service by running the following command:
    ```
 
    If Teleport isn't installed on the Linux server, follow the appropriate [Installation
-instructions](../../installation/linux.mdx) for your environment.
+instructions](../../../installation/linux.mdx) for your environment.
 
 1. Configure the `/etc/teleport.yaml` file on the Linux server with settings similar to the
 following for the Windows Desktop Service:
@@ -256,7 +256,7 @@ To configure a role for desktop access:
 
    Depending on how you configure role-based access controls for Windows, Teleport can create local user logins
    automatically from the `windows_desktop_logins` you specify. For more information about enabling Teleport
-   to create local Windows logins, see [Automatic User Creation](../../reference/agent-services/desktop-access-reference/user-creation.mdx).
+   to create local Windows logins, see [Automatic User Creation](../../../reference/agent-services/desktop-access-reference/user-creation.mdx).
 
 1. Apply the new role to your cluster by running the following command:
 
@@ -288,12 +288,12 @@ To connect to a Windows desktop:
 1. Click **Connect** for the Windows desktop you want to access, then select the
 Windows login to use for the connection.
 
-   ![Connect to a Windows desktop from the Teleport Web UI](../../../img/desktop-access/passwordless-desktop.png)
+   ![Connect to a Windows desktop from the Teleport Web UI](../../../../img/desktop-access/passwordless-desktop.png)
 
    Teleport opens a remote desktop connection and starts recording the desktop session. When you're
    finished working with the Windows desktop, click the **More items** menu, then click **Disconnect**.
 
-   ![Disconnect from a Windows desktop ](../../../img/desktop-access/desktop-disconnect.png)
+   ![Disconnect from a Windows desktop ](../../../../img/desktop-access/desktop-disconnect.png)
 
    To view the recording, select **Audit** in the Teleport Web UI, then click **Session Recordings** in the menu.
 
@@ -304,6 +304,6 @@ Windows login to use for the connection.
 ## Next steps
 
 For more general information about how to create, assign, and update roles, see [Access Controls
-Getting Started](../../admin-guides/access-controls/getting-started.mdx).
+Getting Started](../../../admin-guides/access-controls/getting-started.mdx).
 For more specific information about configuring Windows-specific role permissions, see
 [Role-Based Access Control for Desktops](./rbac.mdx).
