--- a/docs/pages/zero-trust-access/enroll-resources/desktop-access/introduction.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/desktop-access/introduction.mdx
@@ -33,7 +33,7 @@ instances in as many different network segments as you need
 - Teleport will take care of selecting a route to your Windows host at
 connection time.
 
-![Manage access to Windows through Teleport](../../../img/desktop-access/windows-desktop-service-overview.png)
+![Manage access to Windows through Teleport](../../../../img/desktop-access/windows-desktop-service-overview.png)
 
 You can configure Teleport Windows Desktop Service to control access for the following
 scenarios:
@@ -78,13 +78,13 @@ Windows-specific configuration settings, role-based permissions, and audit event
 
 {/* vale messaging.protocol-products = NO */}
 - [Role-Based Access Control for Desktops](./rbac.mdx)
-- [Clipboard Sharing](../../reference/agent-services/desktop-access-reference/clipboard.mdx)
+- [Clipboard Sharing](../../../reference/agent-services/desktop-access-reference/clipboard.mdx)
 - [Directory Sharing](./directory-sharing.mdx)
 - [Dynamic Registration](./dynamic-registration.mdx)
-- [Session Recording and Playback](../../reference/agent-services/desktop-access-reference/sessions.mdx)
+- [Session Recording and Playback](../../../reference/agent-services/desktop-access-reference/sessions.mdx)
 - [Troubleshooting Desktop Access](./troubleshooting.mdx)
-- [Desktop Access Audit Events Reference](../../reference/agent-services/desktop-access-reference/audit.mdx)
-- [Desktop Access Configuration Reference](../../reference/agent-services/desktop-access-reference/configuration.mdx)
-- [Desktop Access CLI Reference](../../reference/agent-services/desktop-access-reference/cli.mdx)
+- [Desktop Access Audit Events Reference](../../../reference/agent-services/desktop-access-reference/audit.mdx)
+- [Desktop Access Configuration Reference](../../../reference/agent-services/desktop-access-reference/configuration.mdx)
+- [Desktop Access CLI Reference](../../../reference/agent-services/desktop-access-reference/cli.mdx)
 {/* vale messaging.protocol-products = YES */}
 
