--- a/docs/pages/zero-trust-access/enroll-resources/desktop-access/rbac.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/desktop-access/rbac.mdx
@@ -64,7 +64,7 @@ spec:
 
 For a full Teleport role reference, including information on how Teleport
 expands the `internal` and `external` traits, see the [Teleport
-Access Controls Reference](../../reference/access-controls/roles.mdx).
+Access Controls Reference](../../../reference/access-controls/roles.mdx).
 
 ## Labeling
 
