--- a/docs/pages/zero-trust-access/infrastructure-as-code/terraform-starter/enroll-resources.mdx
+++ b/docs/pages/zero-trust-access/infrastructure-as-code/terraform-starter/enroll-resources.mdx
@@ -608,7 +608,7 @@ the documentation section for each kind of resource you would like to enroll:
   
 - [Databases](../../../enroll-resources/database-access/database-access.mdx)
 - [Windows
-  desktops](../../../enroll-resources/desktop-access/desktop-access.mdx)
+  desktops](../../enroll-resources/desktop-access/desktop-access.mdx)
 - [Kubernetes
   clusters](../../enroll-resources/kubernetes-access/kubernetes-access.mdx)
 - [Linux servers](../../server-access/server-access.mdx)
