Move the MCP Access docs section
We are organizing the docs so that top-level sections correspond to
Teleport products. Move the MCP Access section into Zero Trust Access,
since this functionality belongs to the ZTA product.

--- a/docs/pages/zero-trust-access/enroll-resources/mcp-access/dynamic-registration.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/mcp-access/dynamic-registration.mdx
@@ -44,7 +44,7 @@ spec:
     run_as_host_user: "docker"
 ```
 
-See the full resource spec [reference](../../reference/agent-services/mcp-access.mdx).
+See the full resource spec [reference](../../../reference/agent-services/mcp-access.mdx).
 
 To create the resource, run:
 
