--- a/docs/pages/zero-trust-access/enroll-resources/mcp-access/getting-started.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/mcp-access/getting-started.mdx
@@ -13,7 +13,7 @@ This guides shows you how to:
 
 ## How it works
 
-![How it works](../../../img/mcp-access/architecture-demo.svg)
+![How it works](../../../../img/mcp-access/architecture-demo.svg)
 
 The Teleport Application Service includes a built-in demo MCP server designed to
 showcase how MCP access works.
@@ -142,7 +142,7 @@ that provide basic information on this demo, your Teleport user, and the MCP
 session. You can interact with it using sample questions like "can you show some
 details on this teleport demo?":
 
-![Demo Server Claude Desktop](../../../img/mcp-access/demo-server-claude-desktop.png)
+![Demo Server Claude Desktop](../../../../img/mcp-access/demo-server-claude-desktop.png)
 
 
 ## Next Steps
@@ -150,5 +150,5 @@ details on this teleport demo?":
 Learn more about protecting MCP servers with Teleport in the following topics:
 
 - [MCP Access Control](rbac.mdx).
-- Configuration and CLI [reference](../../reference/agent-services/mcp-access.mdx).
-- Audit events [reference](../../reference/monitoring/audit.mdx#event-types).
+- Configuration and CLI [reference](../../../reference/agent-services/mcp-access.mdx).
+- Audit events [reference](../../../reference/monitoring/audit.mdx#event-types).
