--- a/docs/pages/zero-trust-access/enroll-resources/mcp-access/mcp-access.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/mcp-access/mcp-access.mdx
@@ -6,7 +6,7 @@ description: Guides to protecting MCP servers with Teleport
 Teleport can provide secure connections to your MCP (Model Context Protocol)
 servers while improving both access control and visibility.
 
-![Architecture diagram for enrolling MCP servers with Teleport](../../../img/mcp-access/architecture-stdio.svg)
+![Architecture diagram for enrolling MCP servers with Teleport](../../../../img/mcp-access/architecture-stdio.svg)
 
 
 ## Getting started
@@ -14,7 +14,7 @@ servers while improving both access control and visibility.
 
 ## Guides
 - [MCP Access with Stdio MCP Server](./stdio.mdx): Set up a Teleport Service and enable secure access to a MCP server with stdio transport.
-- [Configure MCP clients](../../connect-your-client/model-context-protocol/mcp-access.mdx): How to configure MCP clients such as Claude Desktop to access MCP servers.
+- [Configure MCP clients](../../../connect-your-client/model-context-protocol/mcp-access.mdx): How to configure MCP clients such as Claude Desktop to access MCP servers.
 
 ## Configuration & management
 - [MCP Access Controls](./rbac.mdx): Role-Based Access Control (RBAC) for Teleport MCP access.
