--- a/docs/pages/zero-trust-access/enroll-resources/mcp-access/stdio.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/mcp-access/stdio.mdx
@@ -12,7 +12,7 @@ This guides shows you how to:
 
 ## How it works
 
-![How it works](../../../img/mcp-access/architecture-stdio.svg)
+![How it works](../../../../img/mcp-access/architecture-stdio.svg)
 
 Users can configure their MCP clients such as Claude Desktop to start an MCP
 server using `tsh`. Once successfully authorized, `tsh` establishes a session
@@ -177,4 +177,4 @@ Learn more about protecting MCP servers with Teleport in the following topics:
 
 - [MCP Access Control](./rbac.mdx).
 - [Register MCP servers dynamically](./dynamic-registration.mdx)
-- Configuration and CLI [reference](../../reference/agent-services/mcp-access.mdx).
+- Configuration and CLI [reference](../../../reference/agent-services/mcp-access.mdx).
