--- a/docs/pages/zero-trust-access/enroll-resources/mcp-access/rbac.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/mcp-access/rbac.mdx
@@ -64,12 +64,12 @@ Similar to other role fields, `app_labels` and `mcp` fields support templating
 variables.
 
 The `external.xyz` traits are replaced with values from external [single
-sign-on](../../zero-trust-access/sso/sso.mdx) providers. For OIDC,
+sign-on](../../sso/sso.mdx) providers. For OIDC,
 they will be replaced with the value of an "xyz" claim. For SAML, they are
 replaced with an "xyz" assertion value.
 
 For full details on how traits work in Teleport roles, see the [Access Controls
-Reference](../../reference/access-controls/roles.mdx).
+Reference](../../../reference/access-controls/roles.mdx).
 
 For example, here is what a role may look like if you want to assign allowed
 tools from the user's Okta `mcp_tools` assertion:
@@ -109,4 +109,4 @@ spec:
 
 For full details on how variable expansion works in Teleport roles, see the
 [Access Controls
-Reference](../../reference/access-controls/roles.mdx).
+Reference](../../../reference/access-controls/roles.mdx).
